--- a/src/index.html
+++ b/src/index.html
@@ -24,89 +24,12 @@
   <link rel="stylesheet" href="assets/custom-apps.css">
 </head>
 <body>
-<div class="modal fade application search-popup-modal " id="search-popup-modal-show">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <h4>Applications Search</h4>
-      <button type="button" class="close" data-dismiss="modal">&times;</button>
 
-      <ul>
-        <li>
-          <label>Application Type</label>
-          <select id="modale1" [(ngModel)]="applicationType" onchange="checkApplicationType()">
-            <option value="Automative Applications" selected >Automative Applications</option>
-            <option value="Off-Highway Applications">Off-Highway Applications</option>
-            <option value="Trucks & Buses Applications">Trucks & Buses Applications</option>
-          </select>
-        </li>
-        <li id="modalYear">
-          <label>Year</label>
-          <select id="modale2" onchange="checkValid()">
-            <option value="2019">Select Year</option>
-            <option value="2018">Select Year</option>
-            <option value="at">Select Year</option>
-            <option value="at">Select Year</option>
-          </select>
-        </li>
-
-        <li id="modalManufacturer">
-          <label>Manufacturer</label>
-          <select id="modale3" onload="checkValid()">
-            <option value="at">Select Manufacturer</option>
-            <option value="at">Select Manufacturer</option>
-            <option value="at">Select Manufacturer</option>
-            <option value="at">Select Manufacturer</option>
-          </select>
-        </li>
-
-        <li id="modalMake">
-        <label>Make (Optional)</label>
-        <select id="modale4">
-          <option value="at">Select Make</option>
-          <option value="at">Select Make</option>
-          <option value="at">Select Make</option>
-          <option value="at">Select Make</option>
-        </select>
-      </li>
-
-        <li id="modalEquipmentType">
-          <label>Equipment Type</label>
-          <select id="modale5" onload="checkValid()">
-            <option value="at">Select Equipment Type</option>
-            <option value="at">Select Equipment Type</option>
-            <option value="at">Select Equipment Type</option>
-            <option value="at">Select Equipment Type</option>
-          </select>
-        </li>
-
-        <li id="model">
-          <label>Model</label>
-          <select id="modale6" onload="checkValid()">
-            <option value="at">Select Model</option>
-            <option value="at">Select Model</option>
-            <option value="at">Select Model</option>
-            <option value="at">Select Model</option>
-          </select>
-        </li>
-        <li id="engine">
-          <label>Engine</label>
-          <select id="modale7" onload="checkValid()">
-            <option value="at">Select Engine</option>
-            <option value="at">Select Engine</option>
-            <option value="at">Select Engine</option>
-            <option value="at">Select Engine</option>
-          </select>
-        </li>
-
-        <li><input type="submit" disabled class="form-control search" value="serach" /></li>
-      </ul>
-    </div>
-  </div>
-</div>
 
 
 
   <script>
+    var searchURL = 'http://searchdev.parker.com/solr/BaldwinECatalog/select';
       checkApplicationType();
       $( document ).ready( selectBoxCss );
       function selectBoxCss() {
